Displaying of time

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@id/lblName"/>
+        android:layout_above="@+id/lblName"/>
 
     <TextView
         android:id="@+id/lblName"
