--- a/app/src/main/res/layout/activity_play_lists.xml
+++ b/app/src/main/res/layout/activity_play_lists.xml
@@ -7,4 +7,9 @@
     android:layout_height="match_parent"
     tools:context="ru.stepf.musicplayer.PlayListsActivity">
 
+    <ListView
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp"/>
 </android.support.constraint.ConstraintLayout>
